// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderProcessing Component renders created state correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            {
              "flex": 1,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "marginBottom": 24,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "padding": 4,
                  "width": 40,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  color="#4459ff"
                  size="large"
                />
              </View>
            </View>
            <View
              onLayout={[Function]}
              style={
                {
                  "alignSelf": "flex-start",
                  "position": "relative",
                }
              }
              testID="badge-wrapper-badge"
            >
              <View>
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 20,
                      "height": 40,
                      "overflow": "hidden",
                      "width": 40,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={
                      {
                        "uri": "https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/erc20/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.png",
                      }
                    }
                    style={
                      {
                        "flex": 1,
                        "height": undefined,
                        "width": undefined,
                      }
                    }
                    testID="token-avatar-image"
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "aspectRatio": 1,
                    "bottom": 0,
                    "height": 0,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": 0,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  onLayout={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "height": "50%",
                      "justifyContent": "center",
                      "maxHeight": 24,
                      "minHeight": 8,
                      "opacity": 0,
                    }
                  }
                  testID="badgenetwork"
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#ffffff",
                        "borderRadius": 8,
                        "borderWidth": 2,
                        "height": 32,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "shadowColor": "#0000001a",
                        "shadowOffset": {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 1,
                        "shadowRadius": 4,
                        "transform": [
                          {
                            "scale": 1,
                          },
                        ],
                        "width": 32,
                      }
                    }
                  >
                    <Image
                      onError={[Function]}
                      resizeMode="contain"
                      source={1}
                      style={
                        {
                          "height": 32,
                          "width": 32,
                        }
                      }
                      testID="network-avatar-image"
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Bold",
                "fontSize": 40,
                "letterSpacing": 0,
                "lineHeight": 40,
                "marginBottom": 16,
                "textAlign": "center",
              }
            }
          >
            0.05
             
            USDC
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc866",
              "borderRadius": 8,
              "borderWidth": 1,
              "marginBottom": 16,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Account
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 36,
                  "flexDirection": "row",
                  "gap": 4,
                  "paddingLeft": 4,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Network
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                }
              }
            >
              <Image
                source={1}
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "height": 16,
                    "justifyContent": "center",
                    "width": 16,
                  }
                }
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Ethereum
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Order ID
            </Text>
            <TouchableOpacity
              onPress={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 3,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                ..
                der-id
              </Text>
              <SvgMock
                color="#121314"
                fill="currentColor"
                height={24}
                name="Copy"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              {
                "backgroundColor": "#b7bbc866",
                "height": 1,
                "marginHorizontal": -16,
                "marginVertical": 8,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Fees
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $2.50
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Total
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $100.00
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#121314",
                  "borderRadius": 12,
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="main-action-button"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ffffff",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Close
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`OrderProcessing Component renders error state correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            {
              "flex": 1,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "marginBottom": 24,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ca35421a",
                  "borderRadius": 20,
                  "height": 40,
                  "justifyContent": "center",
                  "padding": 4,
                  "width": 40,
                }
              }
            >
              <SvgMock
                color="#ca3542"
                fill="currentColor"
                height={32}
                name="Close"
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
                width={32}
              />
            </View>
            <View
              onLayout={[Function]}
              style={
                {
                  "alignSelf": "flex-start",
                  "position": "relative",
                }
              }
              testID="badge-wrapper-badge"
            >
              <View>
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 20,
                      "height": 40,
                      "overflow": "hidden",
                      "width": 40,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={
                      {
                        "uri": "https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/erc20/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.png",
                      }
                    }
                    style={
                      {
                        "flex": 1,
                        "height": undefined,
                        "width": undefined,
                      }
                    }
                    testID="token-avatar-image"
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "aspectRatio": 1,
                    "bottom": 0,
                    "height": 0,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": 0,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  onLayout={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "height": "50%",
                      "justifyContent": "center",
                      "maxHeight": 24,
                      "minHeight": 8,
                      "opacity": 0,
                    }
                  }
                  testID="badgenetwork"
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#ffffff",
                        "borderRadius": 8,
                        "borderWidth": 2,
                        "height": 32,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "shadowColor": "#0000001a",
                        "shadowOffset": {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 1,
                        "shadowRadius": 4,
                        "transform": [
                          {
                            "scale": 1,
                          },
                        ],
                        "width": 32,
                      }
                    }
                  >
                    <Image
                      onError={[Function]}
                      resizeMode="contain"
                      source={1}
                      style={
                        {
                          "height": 32,
                          "width": 32,
                        }
                      }
                      testID="network-avatar-image"
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Bold",
                "fontSize": 40,
                "letterSpacing": 0,
                "lineHeight": 40,
                "marginBottom": 16,
                "textAlign": "center",
              }
            }
          >
            0.05
             
            USDC
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc866",
              "borderRadius": 8,
              "borderWidth": 1,
              "marginBottom": 16,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Account
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 36,
                  "flexDirection": "row",
                  "gap": 4,
                  "paddingLeft": 4,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Network
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                }
              }
            >
              <Image
                source={1}
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "height": 16,
                    "justifyContent": "center",
                    "width": 16,
                  }
                }
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Ethereum
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Order ID
            </Text>
            <TouchableOpacity
              onPress={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 3,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                ..
                der-id
              </Text>
              <SvgMock
                color="#121314"
                fill="currentColor"
                height={24}
                name="Copy"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              {
                "backgroundColor": "#b7bbc866",
                "height": 1,
                "marginHorizontal": -16,
                "marginVertical": 8,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Fees
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $2.50
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Total
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $100.00
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#3c4d9d0f",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Contact support
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#121314",
                  "borderRadius": 12,
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="main-action-button"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ffffff",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Try again
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`OrderProcessing Component renders no order found state 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <ActivityIndicator
        color="#4459ff"
        size="large"
      />
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`OrderProcessing Component renders processing state correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            {
              "flex": 1,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "marginBottom": 24,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "padding": 4,
                  "width": 40,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  color="#4459ff"
                  size="large"
                />
              </View>
            </View>
            <View
              onLayout={[Function]}
              style={
                {
                  "alignSelf": "flex-start",
                  "position": "relative",
                }
              }
              testID="badge-wrapper-badge"
            >
              <View>
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 20,
                      "height": 40,
                      "overflow": "hidden",
                      "width": 40,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={
                      {
                        "uri": "https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/erc20/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.png",
                      }
                    }
                    style={
                      {
                        "flex": 1,
                        "height": undefined,
                        "width": undefined,
                      }
                    }
                    testID="token-avatar-image"
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "aspectRatio": 1,
                    "bottom": 0,
                    "height": 0,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": 0,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  onLayout={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "height": "50%",
                      "justifyContent": "center",
                      "maxHeight": 24,
                      "minHeight": 8,
                      "opacity": 0,
                    }
                  }
                  testID="badgenetwork"
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#ffffff",
                        "borderRadius": 8,
                        "borderWidth": 2,
                        "height": 32,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "shadowColor": "#0000001a",
                        "shadowOffset": {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 1,
                        "shadowRadius": 4,
                        "transform": [
                          {
                            "scale": 1,
                          },
                        ],
                        "width": 32,
                      }
                    }
                  >
                    <Image
                      onError={[Function]}
                      resizeMode="contain"
                      source={1}
                      style={
                        {
                          "height": 32,
                          "width": 32,
                        }
                      }
                      testID="network-avatar-image"
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Bold",
                "fontSize": 40,
                "letterSpacing": 0,
                "lineHeight": 40,
                "marginBottom": 16,
                "textAlign": "center",
              }
            }
          >
            0.05
             
            USDC
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc866",
              "borderRadius": 8,
              "borderWidth": 1,
              "marginBottom": 16,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Account
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 36,
                  "flexDirection": "row",
                  "gap": 4,
                  "paddingLeft": 4,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Network
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                }
              }
            >
              <Image
                source={1}
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "height": 16,
                    "justifyContent": "center",
                    "width": 16,
                  }
                }
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Ethereum
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Order ID
            </Text>
            <TouchableOpacity
              onPress={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 3,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                ..
                der-id
              </Text>
              <SvgMock
                color="#121314"
                fill="currentColor"
                height={24}
                name="Copy"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              {
                "backgroundColor": "#b7bbc866",
                "height": 1,
                "marginHorizontal": -16,
                "marginVertical": 8,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Fees
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $2.50
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Total
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $100.00
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#121314",
                  "borderRadius": 12,
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="main-action-button"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ffffff",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Close
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`OrderProcessing Component renders success state correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            {
              "flex": 1,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "marginBottom": 24,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#457a391a",
                  "borderRadius": 20,
                  "height": 40,
                  "justifyContent": "center",
                  "padding": 4,
                  "width": 40,
                }
              }
            >
              <SvgMock
                color="#457a39"
                fill="currentColor"
                height={32}
                name="CheckBold"
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
                width={32}
              />
            </View>
            <View
              onLayout={[Function]}
              style={
                {
                  "alignSelf": "flex-start",
                  "position": "relative",
                }
              }
              testID="badge-wrapper-badge"
            >
              <View>
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 20,
                      "height": 40,
                      "overflow": "hidden",
                      "width": 40,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={
                      {
                        "uri": "https://static.cx.metamask.io/api/v2/tokenIcons/assets/eip155/1/erc20/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.png",
                      }
                    }
                    style={
                      {
                        "flex": 1,
                        "height": undefined,
                        "width": undefined,
                      }
                    }
                    testID="token-avatar-image"
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "aspectRatio": 1,
                    "bottom": 0,
                    "height": 0,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": 0,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateY": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  onLayout={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "height": "50%",
                      "justifyContent": "center",
                      "maxHeight": 24,
                      "minHeight": 8,
                      "opacity": 0,
                    }
                  }
                  testID="badgenetwork"
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#ffffff",
                        "borderRadius": 8,
                        "borderWidth": 2,
                        "height": 32,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "shadowColor": "#0000001a",
                        "shadowOffset": {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 1,
                        "shadowRadius": 4,
                        "transform": [
                          {
                            "scale": 1,
                          },
                        ],
                        "width": 32,
                      }
                    }
                  >
                    <Image
                      onError={[Function]}
                      resizeMode="contain"
                      source={1}
                      style={
                        {
                          "height": 32,
                          "width": 32,
                        }
                      }
                      testID="network-avatar-image"
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Bold",
                "fontSize": 40,
                "letterSpacing": 0,
                "lineHeight": 40,
                "marginBottom": 16,
                "textAlign": "center",
              }
            }
          >
            0.05
             
            USDC
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc866",
              "borderRadius": 8,
              "borderWidth": 1,
              "marginBottom": 16,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Account
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#3c4d9d0f",
                  "borderRadius": 36,
                  "flexDirection": "row",
                  "gap": 4,
                  "paddingLeft": 4,
                  "paddingRight": 8,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Network
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                }
              }
            >
              <Image
                source={1}
                style={
                  {
                    "alignItems": "center",
                    "borderRadius": 10,
                    "height": 16,
                    "justifyContent": "center",
                    "width": 16,
                  }
                }
              />
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Ethereum
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Order ID
            </Text>
            <TouchableOpacity
              onPress={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 3,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#121314",
                    "fontFamily": "Geist Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                ..
                der-id
              </Text>
              <SvgMock
                color="#121314"
                fill="currentColor"
                height={24}
                name="Copy"
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                width={24}
              />
            </TouchableOpacity>
          </View>
          <View
            style={
              {
                "backgroundColor": "#b7bbc866",
                "height": 1,
                "marginHorizontal": -16,
                "marginVertical": 8,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Fees
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $2.50
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Total
            </Text>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              $100.00
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          [
            {
              "padding": 15,
              "paddingHorizontal": 16,
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "backgroundColor": "#121314",
                  "borderRadius": 12,
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="main-action-button"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#ffffff",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Close
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
